--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,3 +1,8 @@
-<script src="js/main.js"></script>
+<!-- Srcipts -->
+<script src="js/jquery.min.js"></script>
+
+<script src="js/classie.js"></script>
+<script src="js/libs.js"></script>
+
 </body>
 </html>
