--- a/src/template/head.html
+++ b/src/template/head.html
@@ -8,7 +8,7 @@
 
 	<!-- Stylesheets -->
 	<link href="css/styles.css" rel="stylesheet">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
