--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,8 +1,4 @@
-<!-- Srcipts -->
-<script src="js/jquery.min.js"></script>
-
-<script src="js/classie.js"></script>
-<script src="js/libs.js"></script>
+//= scripts.html
 
 </body>
 </html>
