--- a/src/template/head.html
+++ b/src/template/head.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 <body>
