--- a/src/html/layouts/base.html
+++ b/src/html/layouts/base.html
@@ -37,7 +37,7 @@
     {% include 'data/svg/svg-sprite.svg' %}
   </div>
 
-  <script src="js/jquery.min.js"></script>
+  <script src="js/plugins/jquery.min.js"></script>
   {% block scripts %}{% endblock %}
   <script src="js/libs.js"></script>
 
