--- a/src/html/layouts/base.html
+++ b/src/html/layouts/base.html
@@ -34,12 +34,10 @@
   </div>
 
   <div class="svgSprite" hidden>
-    {% include 'data/svg/svg-sprite.svg' %}
+    {% include 'data/svg/sprite-svg.svg' %}
   </div>
 
-  <script src="js/plugins/jquery.min.js"></script>
-  {% block scripts %}{% endblock %}
-  <script src="js/libs.js"></script>
+  <script src="js/combined.min.js"></script>
 
   {% include 'blocks/counters.html' %}
 </body>
